# littlegreen_ros2_ws

./: .gitignore  README.md
calibration_reports/20260714T031011Z/: calibration_report.txt  calibration_summary.csv  center_step_proposal.yaml  servo_map.proposed.yaml
calibration_reports/verify-model-zero-20260714T033321Z/: verification_report.yaml  verification_summary.csv
calibration_reports/verify-model-zero-20260714T043815Z/: verification_report.yaml  verification_summary.csv
calibration_reports/verify-policy-default-20260714T033418Z/: verification_report.yaml  verification_summary.csv
calibration_reports/verify-policy-default-20260714T044030Z/: verification_report.yaml  verification_summary.csv
docs/: CALIBRATION_WORKFLOW.md  CHANGELOG.md  COMMAND_CHEATSHEET.md  COMMAND_REFERENCE.md  COMMISSIONING.md  FRESH_INSTALL_CHECKLIST.md  HARDWARE_CONTRACT.md  HELP_ITS_BROKEN.md  IMU_CALIBRATION.md  INSTALL_ORANGE_PI.md  INSTALL_UBUNTU_X86_64.md  INTERFACES_AND_PARAMETERS.md  KNOWN_LEGACY_AND_CAVEATS.md  LIVE_POLICY_DEPLOYMENT.md  MIGRATION_V2_7_3_TO_V2_8_0.md  OBSERVATION_CONTRACT.md  README.md  ROS_GRAPH_AND_AUTHORITY.md  SAFETY_AND_LIMITATIONS.md  SERVO_REPLACEMENT_CHECKLIST.md  SOURCES.md  TRACK1_TRACK2_POLICY_METRICS.md  TRACK1_V1_4_5S3_REVIEW.md  TRACK1_V1_4_7_INTEGRATION_REVIEW.md  V2_6_0_RELEASE.md  V2_6_0_VALIDATION.md  V2_6_2_RELEASE.md  V2_6_4_RELEASE.md  V2_6_4_VALIDATION.md  V2_7_1_RELEASE.md  V2_7_2_RELEASE.md  V2_7_3_RELEASE.md  V2_8_0_RELEASE.md  V2_8_0_VALIDATION.md  VALIDATION.md  WORKFLOWS.md  package_inventory.csv
docs/archive/: README.md
docs/archive/v2_6_release_history/: MIGRATION_V2_5_1_TO_V2_6_0.md  V2_6_0_BUILD_MANIFEST.yaml  V2_6_0_REFERENCE.md  (+5 more)
docs/history/: README.md
scripts/: apply_v2_7_2_hotfix.sh  apply_v2_7_3_hotfix.sh  build_workspace.sh  configure_environment.sh  install_onnxruntime_aarch64.sh  install_onnxruntime_x86_64.sh  install_orange_pi.sh  install_ubuntu_x86_64.sh  validate_source_tree.py  verify_install.sh
src/joystick_bridge/: package.xml  setup.py
src/lgh_imu_tools/: README.md  package.xml  setup.cfg  setup.py
src/lgh_imu_tools/config/: imu_contract.yaml
src/lgh_imu_tools/lgh_imu_tools/: __init__.py  exit_codes.py  imu_common.py  imu_preflight.py  imu_recorder.py  orientation_audit.py  stationary_characterization.py
src/lgh_st3215_driver/: CMakeLists.txt  INTEGRATION.md  README.md  package.xml
src/lgh_st3215_driver/config/: servo_driver.yaml  servo_map.yaml  servo_map.yaml.backup-20260713-203103
src/lgh_st3215_driver/config/profiles/: commissioning.yaml  runtime_safe.yaml
src/lgh_st3215_driver/include/lgh_st3215_driver/: diagnostics.hpp  joint_map.hpp  protocol.hpp  serial_port.hpp  servo_bus.hpp  state_buffer.hpp
src/lgh_st3215_driver/launch/: lgh_st3215_driver.launch.py
src/lgh_st3215_driver/msg/: ServoTelemetry.msg
src/lgh_st3215_driver/src/: joint_map.cpp  protocol.cpp  serial_port.cpp  servo_bus.cpp  servo_driver_node.cpp
src/lgh_st3215_driver/test/: test_protocol.cpp
src/lgh_st3215_maintenance/: CMakeLists.txt  README.md  package.xml
src/lgh_st3215_maintenance/include/lgh_st3215_maintenance/: common.hpp
src/lgh_st3215_maintenance/src/: backup_control_tables.cpp  bus_scan.cpp  register_dump.cpp  verify_ids.cpp
src/lgh_st3215_tools/: README.md  package.xml  setup.cfg  setup.py
src/lgh_st3215_tools/config/: standing_pose_library.yaml  track1_action_contract_v3.yaml  track1_action_contract_v4.yaml
src/lgh_st3215_tools/docs/: TRACK2_IDENTIFICATION_GUIDE.md  TRACK2_V2_3_2_NOTES.md  TRACK2_V2_4_3_NOTES.md
src/lgh_st3215_tools/lgh_st3215_tools/: __init__.py  apply_calibration.py  calibration_common.py  capture_calibration.py  dataset_manifest.py  diagnostic_compat.py  exit_codes.py  hardware_snapshot.py  pose_console.py  print_default_pose.py  result.py  servo_identification.py  st3215_preflight.py  standing_characterization.py  verify_calibration.py  verify_reference_pose.py
src/lgh_st3215_tools/test/: test_calibration_semantics.py  test_diagnostic_compat.py
src/littlegreen_biped_pkg/: CMakeLists.txt  FEEDBACK_AGE_QOS_v1_2_1.md  FRESHNESS_GATE_v1_2.md  POLICY_DEBUG.md  POLICY_DEBUG_V2.md  POLICY_LIVE.md  POLICY_SHADOW.md  SAFETY_UPDATE_v1_1.md  package.xml
src/littlegreen_biped_pkg/include/littlegreen_biped_pkg/: policy_observation_contract.hpp
src/littlegreen_biped_pkg/launch/: biped_teleop_mux.launch.py  littlegreen_biped_launch.py  policy_live.launch.py  policy_shadow.launch.py
src/littlegreen_biped_pkg/scripts/: annotate_phase_guided_policy.py  policy_bundle_audit.py  policy_runtime_metrics.py
src/littlegreen_biped_pkg/src/: littlegreen_biped_node.cpp  policy_onnx_contract_probe.cpp
src/littlegreen_biped_pkg/src/checkpoints/: policy.onnx
src/littlegreen_biped_pkg/src/configs/: joint_limits.yaml  joint_map.yaml  joint_map.yaml.backup-20260713-213526  policy.onnx  policy_latest.yaml  policy_runtime.yaml  twist_mux.yaml
src/littlegreen_biped_pkg/test/: test_annotate_phase_guided_policy.py  test_policy_bundle_audit.py  test_policy_observation_contract.cpp
src/littlegreen_description/: package.xml  setup.cfg  setup.py
src/littlegreen_description/config/: display.rviz
src/littlegreen_description/launch/: display.launch.py  gazebo.launch.py
src/littlegreen_description/meshes/: base_link.stl  imu_2.stl  leg_left_ankle_pitch.stl  leg_left_ankle_roll.stl  leg_left_hip_pitch.stl  leg_left_hip_roll.stl  leg_left_hip_yaw.stl  leg_left_knee_pitch.stl  leg_left_toe_pitch.stl  leg_right_ankle_pitch.stl  leg_right_ankle_roll.stl  leg_right_hip_pitch.stl  leg_right_hip_roll.stl  leg_right_hip_yaw.stl  leg_right_knee_pitch.stl  leg_right_toe_pitch.stl
src/littlegreen_description/urdf/: littlegreen.gazebo  littlegreen.trans  littlegreen.xacro  materials.xacro
src/pd_controller_pkg/: README.md  package.xml  setup.cfg  setup.py
src/pd_controller_pkg/config/: pd_config.yaml
src/pd_controller_pkg/pd_controller_pkg/: core.py  pd_controller_node.py
src/pd_controller_pkg/test/: test_outer_loop_controller.py
tools/lgh_hardware_limit_tool/: README.md  lgh_hardware_limit_tool.py
(+37 files in other folders)
