<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgh_st3215_maintenance</name>
  <version>0.2.0</version>
  <description>Offline read-only ST3215 bus inspection and control-table backup tools for LittleGreen.</description>
  <maintainer email="scott.milich@me.com">Scott Milich</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>lgh_st3215_driver</depend>
  <depend>yaml-cpp</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
